--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             <li>
               <a href="https://github.com/adgamerx">Aman Dutt</a>
             </li>
-            
+            <li>
+              <a href="https://github.com/shruthi-kotawar">shruthi kotawar</a>
+            </li>
 
 
 
